--- a/xiumu-generator/src/main/resources/vm/mapper.xml.vm
+++ b/xiumu-generator/src/main/resources/vm/mapper.xml.vm
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE mapper PUBLIC "-//mybatis.org//DTD Mapper 3.0//EN" "http://mybatis.org/dtd/mybatis-3-mapper.dtd" >
-<mapper namespace="${servicePackageName}.${moduleName}.dao.${ClassName}Dao">
+<mapper namespace="${servicePackageName}.dao.${moduleName}.${ClassName}Dao">
 
     <sql id="${className}Query">
         <if test=" ${className} != null ">
@@ -30,15 +30,4 @@
         </where>
         order by create_time desc
     </select>
-
-    <update id="updateById">
-        update ${tableName}
-        <trim prefix="SET" suffixOverrides=",">
-            #foreach ($column in $columns)
-                <if test=" ${className}.$column.javaField != null ">
-                    $column.columnName = #{${className}.$column.javaField}
-                </if>
-            #end
-        </trim>
-    </update>
 </mapper>
