--- a/xiumu-generator/src/main/resources/vm/service.java.vm
+++ b/xiumu-generator/src/main/resources/vm/service.java.vm
@@ -1,4 +1,4 @@
-package ${servicePackageName}.${moduleName}.service;
+package ${servicePackageName}.service.${moduleName};
 
 import com.baomidou.mybatisplus.extension.service.IService;
 import ${pojoPackageName}.${moduleName}.entity.${ClassName};
@@ -10,10 +10,6 @@ import com.xiumu.common.core.page.PageQuery;
 import java.util.List;
 
 /**
- * service 层 方法命名遵循自解释原则，好的方法名可以直接简单明了的表示该方法的作用
- * 尽量少用 Wrapper 条件构造器，尤其是条件过多的时候，一定要将 sql 写到 xml 中，做到 sql 与代码之间的隔离
- * 简单查询可以使用 Wrapper 条件构造器
- *
  * ${functionName} Service 接口
  *
  * @author ${author}
@@ -52,7 +48,7 @@ public interface ${ClassName}Service extends IService<${ClassName}> {
      * @param id 主键 ID
      * @return
      */
-    boolean updateById(${ClassName}DTO ${className}DTO, Long id);
+    boolean updateById(${ClassName}DTO ${className}DTO, String id);
 
     /**
      * 根据 id 逻辑删除
@@ -60,5 +56,5 @@ public interface ${ClassName}Service extends IService<${ClassName}> {
      * @param id id
      * @return
      */
-    boolean deleteById(Long id);
+    boolean deleteById(String id);
 }
