--- a/xiumu-generator/src/main/resources/vm/serviceImpl.java.vm
+++ b/xiumu-generator/src/main/resources/vm/serviceImpl.java.vm
@@ -5,10 +5,9 @@ import cn.hutool.core.util.ObjectUtil;
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
 import com.baomidou.mybatisplus.core.conditions.update.LambdaUpdateWrapper;
 import com.baomidou.mybatisplus.core.metadata.IPage;
-import com.xiumu.common.core.enums.YesNo;
+import com.xiumu.enums.YesNo;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
 import ${pojoPackageName}.${moduleName}.entity.${ClassName};
 import ${pojoPackageName}.${moduleName}.model.dto.${ClassName}DTO;
 import ${pojoPackageName}.${moduleName}.model.query.${ClassName}Query;
