--- a/xiumu-generator/src/main/resources/vm/serviceImpl.java.vm
+++ b/xiumu-generator/src/main/resources/vm/serviceImpl.java.vm
@@ -9,8 +9,8 @@ import com.xiumu.enums.YesNo;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import ${pojoPackageName}.${moduleName}.entity.${ClassName};
-import ${pojoPackageName}.${moduleName}.model.dto.${ClassName}DTO;
-import ${pojoPackageName}.${moduleName}.model.query.${ClassName}Query;
+import ${pojoPackageName}.${moduleName}.dto.${ClassName}DTO;
+import ${pojoPackageName}.${moduleName}.query.${ClassName}Query;
 import ${servicePackageName}.dao.${moduleName}.${ClassName}Dao;
 import ${servicePackageName}.service.${moduleName}.${ClassName}Service;
 import com.xiumu.common.core.page.PageQuery;
