--- a/xiumu-generator/src/main/resources/vm/mapper.java.vm
+++ b/xiumu-generator/src/main/resources/vm/mapper.java.vm
@@ -3,8 +3,8 @@ package ${servicePackageName}.dao.${moduleName};
 import com.baomidou.mybatisplus.core.mapper.BaseMapper;
 import com.baomidou.mybatisplus.core.metadata.IPage;
 import ${pojoPackageName}.${moduleName}.entity.${ClassName};
-import ${pojoPackageName}.${moduleName}.model.dto.${ClassName}DTO;
-import ${pojoPackageName}.${moduleName}.model.query.${ClassName}Query;
+import ${pojoPackageName}.${moduleName}.dto.${ClassName}DTO;
+import ${pojoPackageName}.${moduleName}.query.${ClassName}Query;
 import org.springframework.stereotype.Repository;
 import org.apache.ibatis.annotations.Param;
 import com.xiumu.common.core.page.PageQuery;
